# litesoc-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
src/litesoc/: __init__.py  client.py  types.py
tests/: __init__.py  test_litesoc.py
