[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litesoc"
version = "1.0.0"
description = "Official Python SDK for LiteSOC - Security event tracking and threat detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LiteSOC", email = "support@litesoc.io"}
]
maintainers = [
    {name = "LiteSOC", email = "support@litesoc.io"}
]
keywords = [
    "litesoc",
    "security",
    "soc",
    "security-events",
    "threat-detection",
    "brute-force",
    "audit-log",
    "authentication",
    "monitoring"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "responses>=0.25.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://www.litesoc.io"
Documentation = "https://www.litesoc.io/docs/api"
Repository = "https://github.com/LiteSOC/litesoc-python"
Issues = "https://github.com/LiteSOC/litesoc-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
litesoc = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true
